--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -1,6 +1,19 @@
 services:
+  nginx:
+    image: nginx:latest
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./certs:/etc/letsencrypt:ro
+      - ./certs-data:/var/lib/letsencrypt
+    depends_on:
+      - app
+
   app:
     image: {{ image_name }}
     restart: always
-    ports:
-      - "80:3000"
+    expose:
+      - "3000"
