--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -15,8 +15,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/letsencrypt:ro
-      - ./certs-data:/var/lib/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/lib/letsencrypt:/var/lib/letsencrypt:ro
     depends_on:
       - app
     networks:
